Update JVM arguments and k8s limits for Java 11